--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,63 +1,44 @@
+
 name: Deploy to PythonAnywhere
 
 on:
   push:
-    branches: [ main, master ]
-  workflow_dispatch: 
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
     
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.7.0
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-        
-    - name: Setup Python
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        
-    - name: Install deployment tools
+    
+    - name: Install PythonAnywhere CLI
       run: |
-        python -m pip install --upgrade pip
-        pip install fabric paramiko cryptography
-        
+        pip install requests
+    
     - name: Deploy to PythonAnywhere
       env:
-        PA_HOST: ssh.pythonanywhere.com
-        PA_USERNAME: ${{ secrets.PA_USERNAME }}
-        PA_API_TOKEN: ${{ secrets.PA_API_TOKEN }}
+        PA_API_TOKEN: ${{ secrets.PYTHONANYWHERE_API_TOKEN }}
+        PA_USERNAME: ${{ secrets.PYTHONANYWHERE_USERNAME }}
+        PA_DOMAIN: ${{ secrets.PYTHONANYWHERE_DOMAIN }}
       run: |
-        # Add PythonAnywhere host key to known_hosts
-        ssh-keyscan -H ssh.pythonanywhere.com >> ~/.ssh/known_hosts
+        # Create deployment script
+        cat > deploy.py << 'EOF'
+        import requests
+        import os
+        import time
+        import json
         
-        # Clone or pull the latest code on PythonAnywhere
-        ssh $PA_USERNAME@$PA_HOST "
-          cd ~/SocialAuth &&
-          git pull origin main &&
-          
-          # Activate virtual environment and install dependencies
-          source ~/venv/bin/activate &&
-          pip install -r requirements.txt &&
-          
-          # Apply migrations
-          python manage.py migrate --noinput &&
-          
-          # Collect static files
-          python manage.py collectstatic --noinput &&
-          
-          # Reload the web app via the API
-          curl -X POST \
-            -H 'Authorization: Token '$PA_API_TOKEN \
-            https://www.pythonanywhere.com/api/v0/user/$PA_USERNAME/webapps/$PA_USERNAME.pythonanywhere.com/reload/
-        "
+        API_TOKEN = os.environ['PA_API_TOKEN']
+        USERNAME = os.environ['PA_USERNAME']
+        DOMAIN = os.environ['PA_DOMAIN']
         
-    - name: Verify deployment
-      run: |
-        echo "Deployment completed. Verifying site availability..."
-        curl -I https://${{ secrets.PA_USERNAME }}.pythonanywhere.com/ || echo "Site may still be starting up, check manually." 
+        BASE_URL = 'https://www.pythonanywhere.com/api/v0/user
