--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,8 @@ jobs:
         PA_API_TOKEN: ${{ secrets.PYTHONANYWHERE_API_TOKEN }}
         PA_USERNAME: ${{ secrets.PYTHONANYWHERE_USERNAME }}
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SSH_HOST: ssh.pythonanywhere.com
       run: |
-        # Create SSH directory and set permissions
+        # Set up SSH
         mkdir -p ~/.ssh
         chmod 700 ~/.ssh
         
@@ -40,33 +39,11 @@ jobs:
         echo "PA_USERNAME is set: $([[ -n "$PA_USERNAME" ]] && echo "Yes" || echo "No")"
         echo "SSH_PRIVATE_KEY length: ${#SSH_PRIVATE_KEY}"
         
-        # Validate the SSH key format (must start with -----BEGIN)
-        if [[ "$SSH_PRIVATE_KEY" != "-----BEGIN"* ]]; then
-          echo "ERROR: SSH_PRIVATE_KEY does not appear to be in the correct format"
-          echo "The key should begin with '-----BEGIN'"
-          echo "Please check that the SSH_PRIVATE_KEY secret is set correctly in the repository"
-          exit 1
-        fi
-        
-        # Create SSH key file with proper permissions
+        # Save and secure the SSH key
         echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         
-        # Verify SSH key content (safely)
-        echo "First few characters of SSH key:"
-        head -c 20 ~/.ssh/id_rsa | xxd -p
-        
-        # Set up SSH config for easier connection
-        cat > ~/.ssh/config << EOF
-        Host pythonanywhere
-          HostName ssh.pythonanywhere.com
-          User $PA_USERNAME
-          IdentityFile ~/.ssh/id_rsa
-          StrictHostKeyChecking no
-        EOF
-        chmod 600 ~/.ssh/config
-        
-        # Add host key without strict checking
+        # Add PythonAnywhere host key
         ssh-keyscan -t rsa ssh.pythonanywhere.com >> ~/.ssh/known_hosts
         
         # Create deployment script
@@ -119,28 +96,26 @@ jobs:
         echo "Deployment completed successfully!"
         EOL
         
-        # Test SSH connection first
+        # Test SSH connection
         echo "Testing SSH connection..."
-        # Skip using the config file initially to debug direct connection
-        if ssh -o StrictHostKeyChecking=no -o BatchMode=yes -o ConnectTimeout=5 $PA_USERNAME@ssh.pythonanywhere.com "echo SSH connection successful"; then
+        if ssh -o StrictHostKeyChecking=no -o BatchMode=yes -i ~/.ssh/id_rsa $PA_USERNAME@ssh.pythonanywhere.com "echo SSH connection successful"; then
           echo "SSH connection working correctly, proceeding with deployment"
           
-          # Copy script to PythonAnywhere using direct username and host
-          scp -o StrictHostKeyChecking=no deploy.sh $PA_USERNAME@ssh.pythonanywhere.com:~/deploy.sh
+          # Copy and execute deployment script
+          echo "Copying deployment script..."
+          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa deploy.sh $PA_USERNAME@ssh.pythonanywhere.com:~/deploy.sh
           
-          # Execute script with variables
-          ssh -o StrictHostKeyChecking=no $PA_USERNAME@ssh.pythonanywhere.com "chmod +x ~/deploy.sh && API_TOKEN='${PA_API_TOKEN}' USERNAME='${PA_USERNAME}' ~/deploy.sh"
+          echo "Running deployment script..."
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa $PA_USERNAME@ssh.pythonanywhere.com "chmod +x ~/deploy.sh && API_TOKEN='${PA_API_TOKEN}' USERNAME='${PA_USERNAME}' ~/deploy.sh"
+          
+          echo "Deployment completed!"
         else
           echo "SSH connection failed, checking key permissions and debug info"
           ls -la ~/.ssh/
-          echo "Content of SSH config:"
-          cat ~/.ssh/config
           echo "Attempting verbose connection for debugging:"
-          ssh -v -o StrictHostKeyChecking=no $PA_USERNAME@ssh.pythonanywhere.com "echo test"
+          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa $PA_USERNAME@ssh.pythonanywhere.com "echo test"
           exit 1
         fi
-        
-        echo "Deployment completed!"
     
     - name: Verify deployment
       run: |
